--- a/index.htm
+++ b/index.htm
@@ -120,6 +120,22 @@
     <p>Case Study 3 + <a href ="https://www.figma.com/proto/mJKiJWjKLbfmTfjRwhONOf/Eigo-Ganbare-Quick-Match-Sushi?node-id=210%3A5&scaling=scale-down&page-id=210%3A2&starting-point-node-id=210%3A5">BONUS: The Hunt</a></p>
        </article>
   
+  <article class="w3-third">
+    <p><a href ="https://www.coursera.org/account/accomplishments/specialization/certificate/CRCN9PS2EX3V">
+      Google UX Design Professional Certificate</a></p>
+    <a href ="./case-study-1.pdf"><img src="./wantToBeUXDesigner/cs-1.png" alt="Random Name" style="width:100%"></a>
+    <p>Case Study 1</p>
+  </article>
+  <article class="w3-third">
+    <p><br></p>
+    <a href ="./case-study-2.pdf"><img src="./wantToBeUXDesigner/cs-2.png" alt="Random Name" style="width:100%"></a>
+    <p>Case Study 2 + <a href ="https://www.figma.com/proto/ZD2ilkOcveWQzk67YpGfB8/Eigo-Ganbare-True-or-False?node-id=1%3A3&scaling=scale-down&page-id=0%3A1&starting-point-node-id=1%3A3">BONUS: The マル and バツ game</a></p>
+  </article>
+  <article class="w3-third">
+    <p><br></p>
+    <a href ="./case-study-3.pdf"><img src="./wantToBeUXDesigner/cs-3.png" alt="Random Name" style="width:100%"></a>
+    <p>Case Study 3 + <a href ="https://www.figma.com/proto/mJKiJWjKLbfmTfjRwhONOf/Eigo-Ganbare-Quick-Match-Sushi?node-id=210%3A5&scaling=scale-down&page-id=210%3A2&starting-point-node-id=210%3A5">BONUS: The Hunt</a></p>
+       </article>
  
   <article class="w3-third">
     <p> <a href ="https://www.freecodecamp.org/certification/alee50/responsive-web-design">Responsive Web Design Certificate</a>  </p>
@@ -131,7 +147,7 @@
     <a href ="https://eigoganbare.com"><img src="./wantToBeUXDesigner/EG-3.jpg" alt="Random Name" style="width:100%"></a>
     <p>My Eigo Ganbare website in Action!</p>
   </article>
-  
+ 
    <article class="w3-third">
     <p><br></p>
     <img src="./wantToBeUXDesigner/ar-sample.png" alt="Random Name" style="width:100%">
