--- a/index.htm
+++ b/index.htm
@@ -121,9 +121,8 @@
        </article>
   
   <article class="w3-third">
-    <p><a href ="https://www.coursera.org/account/accomplishments/specialization/certificate/CRCN9PS2EX3V">
-      Google UX Design Professional Certificate</a></p>
-    <a href ="./case-study-1.pdf"><img src="./wantToBeUXDesigner/cs-1.png" alt="Random Name" style="width:100%"></a>
+    <p>My mini projects for 2021</p>
+    <a href ="./portfolio-mini-projects/sample-worksheets.pdf"><img src="./portfolio-mini-projects/mini-proj-img-01.png" alt="Random Name" style="width:100%"></a>
     <p>Case Study 1</p>
   </article>
   <article class="w3-third">
